--- a/addressbook_main/pom.xml
+++ b/addressbook_main/pom.xml
@@ -687,6 +687,6 @@
             </reporting>
         </profile>
     </profiles>
-    <!--THis is comment-->
+    <!--THis is comment AND THIS IS PIPELINE-->
     
 </project>
